--- a/css/style.css
+++ b/css/style.css
@@ -1,407 +1,1 @@
-@charset "UTF-8";
-.spritz {
-  position: relative;
-  max-width: 100%;
-  padding: 10px;
-  border-top: 2px solid #000;
-  border-bottom: 2px solid #000;
-  margin: 25px auto;
-  font-size: 1em;
-  background: #fff;
-  text-align: center;
-}
-.spritz:before, .spritz:after {
-  content: "";
-  position: absolute;
-  left: 50%;
-  height: 0.8rem;
-  width: 2px;
-  margin-left: -1px;
-  background-color: #000;
-}
-.night .spritz {
-  border-color: #555;
-}
-.night .spritz:before, .night .spritz:after {
-  background-color: #555;
-}
-.spritz:before {
-  top: 0;
-}
-.spritz:after {
-  bottom: 0;
-}
-
-.spritz-word {
-  font-size: 2em;
-  line-height: 1.6em;
-  height: 1.7em;
-  font-weight: 600;
-  color: #000;
-}
-.night .spritz-word {
-  color: #bbb;
-}
-.spritz-word div {
-  display: table-cell;
-}
-.spritz-word div:first-child {
-  width: 50%;
-  text-align: right;
-}
-.spritz-word div:nth-child(2) {
-  color: #e60000;
-}
-.night .spritz-word div:nth-child(2) {
-  color: #ff4d4d;
-}
-.spritz-word div:last-child {
-  width: 60%;
-  text-align: left;
-}
-
-.controls {
-  text-align: center;
-}
-.controls:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-.controls a {
-  display: inline-block;
-  vertical-align: bottom;
-  color: #3c763d;
-  text-decoration: none;
-  transition: color 150ms linear;
-}
-.controls a:hover, .controls a.active {
-  color: #777;
-}
-.night .controls a {
-  color: #444;
-}
-.night .controls a:hover, .night .controls a.active {
-  color: #999;
-}
-
-.settings input, .settings textarea, .settings button {
-  box-sizing: border-box;
-  border: 0;
-  color: #3c763d;
-  background: transparent;
-}
-.night .settings input, .night .settings textarea, .night .settings button {
-  color: #888;
-}
-.settings input:focus, .settings textarea:focus, .settings button:focus {
-  outline: none;
-}
-
-.settings-controls {
-  max-width: 30rem;
-  margin: 0 auto;
-}
-.settings-controls .speed {
-  float: left;
-}
-.settings-controls .interaction {
-  float: right;
-}
-.settings-controls a {
-  font-size: 3rem;
-  line-height: 4rem;
-}
-.settings-controls .save {
-  transition: opacity 0.2s linear;
-  opacity: 0;
-  font-size: 2.5rem;
-}
-.paused .settings-controls .save {
-  opacity: 1;
-}
-.autosave .settings-controls .save {
-  opacity: 0;
-}
-.settings-controls .save.active {
-  opacity: 0.4 !important;
-}
-.settings-controls .pause {
-  margin: 0;
-  width: 4rem;
-  text-align: center;
-  font-size: 4rem;
-}
-.paused .settings-controls .pause:before {
-  content: "";
-  position: relative;
-  margin-left: -0.4rem;
-}
-
-.wpm {
-  position: relative;
-  display: inline-block;
-  width: 7rem;
-  margin: 0;
-  padding: 0;
-  text-align: center;
-  font-weight: 600;
-  font-size: 2rem;
-  line-height: 4rem;
-  vertical-align: top;
-}
-.wpm::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-}
-
-.extra-controls {
-  margin: 0;
-  margin-bottom: 20px;
-}
-.extra-controls .toggle {
-  font-size: 2rem;
-  padding: 1rem 2rem;
-}
-.extra-controls .zoom {
-  font-size: 2rem;
-}
-.extra-controls .zoom * {
-  display: inline-block;
-  padding: 0.6rem;
-}
-.extra-controls .autosave .checkbox {
-  display: none;
-}
-.extra-controls .autosave .checkbox:checked + .checkbox-label:before {
-  content: "";
-}
-.extra-controls .autosave .checkbox-label {
-  user-select: none;
-  cursor: pointer;
-}
-.extra-controls .autosave .checkbox-label:before {
-  position: relative;
-  display: inline-block;
-  margin-right: 1rem;
-  width: 1.4rem;
-  vertical-align: top;
-  overflow: visible;
-  font-size: 1.8rem;
-}
-
-.words {
-  margin: 0 auto;
-  position: relative;
-}
-.fullscreen .words {
-  max-width: 60rem;
-}
-.words .demo-words {
-  width: 100%;
-  transition: height 0.2s linear;
-  padding: 1rem 1.5rem;
-}
-.words .demo-words::-webkit-scrollbar {
-  width: 0.8rem;
-}
-.words .demo-words::-webkit-scrollbar-thumb {
-  background: #d5d5d5;
-}
-.night .words .demo-words {
-  background-color: #191919;
-}
-.night .words .demo-words::-webkit-scrollbar-thumb {
-  background: #2d2d2d;
-}
-.night .words .demo-words::-webkit-resizer {
-  background: #141414;
-}
-
-.progress-bar {
-  height: 5px;
-  width: 0;
-  background: red;
-  opacity: 0.4;
-}
-
-.words-controls {
-  margin: 0 0 2rem;
-}
-.words-controls a {
-  margin: 0 0.6rem;
-  font-size: 2rem;
-  line-height: 2rem;
-}
-.words-controls .refresh {
-  font-size: 2.6rem;
-}
-.fullscreen .words-controls .expand:before {
-  content: "";
-}
-
-.light {
-  position: absolute;
-  top: 2rem;
-  left: 3rem;
-  font-size: 3rem;
-  font-family: "Spritz", sans-serif;
-  text-decoration: none;
-}
-.light:after {
-  content: "";
-  color: #aaa;
-}
-.night .light:after {
-  content: "";
-  color: #444;
-}
-
-#alert {
-  position: absolute;
-  top: 0;
-  padding: 2rem;
-  box-sizing: border-box;
-  width: 100%;
-  text-align: center;
-  left: 0;
-  pointer-events: none;
-}
-.words .demo-words p {
-  text-align: left;
-  line-height: 150%;
-  font-size: 18px;
-}
-html {
-  font-size: 10px;
-}
-
-body {
-  background: #fff;
-  color: #000;
-  transition: background 0.1s linear;
-  margin: 3rem;
-}
-.night body {
-  background: #000;
-  color: #888;
-}
-
-body, input, textarea, button {
-  font-size: 1.4rem;
-  font-family: Open Sans, sans-serif;
-}
-
-::selection {
-  background: #aaa;
-  color: #eee;
-}
-.night ::selection {
-  background: #444;
-  color: #191919;
-}
-
-@font-face {
-  font-family: "Spritz";
-  src: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2361/spritz.eot?ziiuop");
-  src: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2361/spritz.eot?#iefixziiuop") format("embedded-opentype"), url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2361/spritz.woff?ziiuop") format("woff"), url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2361/spritz.ttf?ziiuop") format("truetype"), url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2361/spritz.svg?ziiuop#spritz") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-[class*="entypo-"]:before {
-  font-family: "Spritz", sans-serif;
-}
-
-.entypo-fast-backward:before {
-  content: "";
-}
-
-.entypo-fast-forward:before {
-  content: "";
-}
-
-.entypo-save:before {
-  content: "";
-}
-
-.entypo-left-open:before {
-  content: "";
-}
-
-.entypo-pause:before {
-  content: "";
-}
-
-.entypo-right-open:before {
-  content: "";
-}
-
-.entypo-dot-3:before {
-  content: "";
-}
-
-.entypo-minus:before {
-  content: "";
-}
-
-.entypo-search:before {
-  content: "";
-}
-
-.entypo-plus:before {
-  content: "";
-}
-
-.entypo-cancel:before {
-  content: "";
-}
-
-.entypo-doc-text:before {
-  content: "";
-}
-
-.entypo-cycle:before {
-  content: "";
-}
-
-.entypo-resize-full:before {
-  content: "";
-}
-header {
-  text-align: center;
-}
-
-#spritz_words img {
-  width: 100%;
-  height: 100%;
-}
-body {
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover !important;
-}
-.highlight {
-  color: #dff0d8;
-}
-#image-display {
-  width: 100%;
-  height: 1000px;
-}
-
-#wpm {
-  line-height: 239%;
-  margin-left: -12px;
-  margin-right: 10px;
-}
-#spritz_words {
-  display: none;
-}
-input#spritz_wpm {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  margin: 0;
-}
-input#spritz_wpm {
-    -moz-appearance:textfield;
-}
+@charset "UTF-8";.spritz{position:relative;max-width:100%;padding:10px;border-top:2px solid #000;border-bottom:2px solid #000;margin:25px auto;font-size:1em;background:#fff;text-align:center}.spritz:before,.spritz:after{content:"";position:absolute;left:50%;height:0.8rem;width:2px;margin-left:-1px;background-color:#000}.night .spritz{border-color:#555}.night .spritz:before,.night .spritz:after{background-color:#555}.spritz:before{top:0}.spritz:after{bottom:0}.spritz-word{font-size:2em;line-height:1.6em;height:1.7em;font-weight:600;color:#000}.night .spritz-word{color:#bbb}.spritz-word div{display:table-cell}.spritz-word div:first-child{width:50%;text-align:right}.spritz-word div:nth-child(2){color:#e60000}.night .spritz-word div:nth-child(2){color:#ff4d4d}.spritz-word div:last-child{width:60%;text-align:left}.controls{text-align:center}.controls:after{content:"";display:table;clear:both}.controls a{display:inline-block;vertical-align:bottom;color:#3c763d;text-decoration:none;transition:color 150ms linear}.controls a:hover,.controls a.active{color:#777}.night .controls a{color:#444}.night .controls a:hover,.night .controls a.active{color:#999}.settings input,.settings textarea,.settings button{box-sizing:border-box;border:0;color:#3c763d;background:transparent}.night .settings input,.night .settings textarea,.night .settings button{color:#888}.settings input:focus,.settings textarea:focus,.settings button:focus{outline:none}.settings-controls{max-width:30rem;margin:0 auto}.settings-controls .speed{float:left}.settings-controls .interaction{float:right}.settings-controls a{font-size:3rem;line-height:4rem}.settings-controls .save{transition:opacity 0.2s linear;opacity:0;font-size:2.5rem}.paused .settings-controls .save{opacity:1}.autosave .settings-controls .save{opacity:0}.settings-controls .save.active{opacity:0.4 !important}.settings-controls .pause{margin:0;width:4rem;text-align:center;font-size:4rem}.paused .settings-controls .pause:before{content:"";position:relative;margin-left:-0.4rem}.wpm{position:relative;display:inline-block;width:7rem;margin:0;padding:0;text-align:center;font-weight:600;font-size:2rem;line-height:4rem;vertical-align:top}.wpm::-webkit-inner-spin-button{-webkit-appearance:none}.extra-controls{margin:0;margin-bottom:20px}.extra-controls .toggle{font-size:2rem;padding:1rem 2rem}.extra-controls .zoom{font-size:2rem}.extra-controls .zoom *{display:inline-block;padding:0.6rem}.extra-controls .autosave .checkbox{display:none}.extra-controls .autosave .checkbox:checked + .checkbox-label:before{content:""}.extra-controls .autosave .checkbox-label{user-select:none;cursor:pointer}.extra-controls .autosave .checkbox-label:before{position:relative;display:inline-block;margin-right:1rem;width:1.4rem;vertical-align:top;overflow:visible;font-size:1.8rem}.words{margin:0 auto;position:relative}.fullscreen .words{max-width:60rem}.words .demo-words{width:100%;transition:height 0.2s linear;padding:1rem 1.5rem}.words .demo-words::-webkit-scrollbar{width:0.8rem}.words .demo-words::-webkit-scrollbar-thumb{background:#d5d5d5}.night .words .demo-words{background-color:#191919}.night .words .demo-words::-webkit-scrollbar-thumb{background:#2d2d2d}.night .words .demo-words::-webkit-resizer{background:#141414}.progress-bar{height:5px;width:0;background:red;opacity:0.4}.words-controls{margin:0 0 2rem}.words-controls a{margin:0 0.6rem;font-size:2rem;line-height:2rem}.words-controls .refresh{font-size:2.6rem}.fullscreen .words-controls .expand:before{content:""}.light{position:absolute;top:2rem;left:3rem;font-size:3rem;font-family:"Spritz", sans-serif;text-decoration:none}.light:after{content:"";color:#aaa}.night .light:after{content:"";color:#444}#alert{position:absolute;top:0;padding:2rem;box-sizing:border-box;width:100%;text-align:center;left:0;pointer-events:none}.words .demo-words p{text-align:left;line-height:150%;font-size:18px}html{font-size:10px}body{background:#fff;color:#000;transition:background 0.1s linear;margin:3rem}.night body{background:#000;color:#888}body,input,textarea,button{font-size:1.4rem;font-family:Open Sans, sans-serif}::selection{background:#aaa;color:#eee}.night ::selection{background:#444;color:#191919}@font-face{font-family:"Spritz";src:url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2361/spritz.eot?ziiuop");src:url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2361/spritz.eot?#iefixziiuop") format("embedded-opentype"), url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2361/spritz.woff?ziiuop") format("woff"), url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2361/spritz.ttf?ziiuop") format("truetype"), url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/2361/spritz.svg?ziiuop#spritz") format("svg");font-weight:normal;font-style:normal}[class*="entypo-"]:before{font-family:"Spritz", sans-serif}.entypo-fast-backward:before{content:""}.entypo-fast-forward:before{content:""}.entypo-save:before{content:""}.entypo-left-open:before{content:""}.entypo-pause:before{content:""}.entypo-right-open:before{content:""}.entypo-dot-3:before{content:""}.entypo-minus:before{content:""}.entypo-search:before{content:""}.entypo-plus:before{content:""}.entypo-cancel:before{content:""}.entypo-doc-text:before{content:""}.entypo-cycle:before{content:""}.entypo-resize-full:before{content:""}header{text-align:center}#spritz_words img{width:100%;height:100%}body{-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;background-size:cover !important}.highlight{color:#dff0d8}#image-display{width:100%;height:1000px}#wpm{line-height:239%;margin-left:-12px;margin-right:10px}#spritz_words{display:none}input#spritz_wpm{-webkit-appearance:none;-moz-appearance:none;appearance:none;margin:0}input#spritz_wpm{-moz-appearance:textfield}
